feat: add extra-hours section

--- a/src/components/_variables.pug
+++ b/src/components/_variables.pug
@@ -65,6 +65,43 @@
         },
     ]
 
+//-Дополнительный накат
+
+-
+    extraHours = [
+        {
+            title: "Минимальный пакет",
+            advantages:
+                    [
+                        "5 занятий с инструктором",
+                        "Доступ к онлайн платформе ПДД",
+                        "Онлайн поддержка"
+                    ],
+            price: '11 000 рублей'
+        },
+        {
+            title: "Оптимальный пакет",
+            advantages:
+                    [
+                        "10 занятий с инструктором",
+                        "Доступ к онлайн платформе ПДД",
+                        "Онлайн поддержка"
+                    ],
+            price: '20 000 рублей'
+        },
+        {
+            title: "Расширенный пакет",
+            advantages:
+                    [
+                        "10 занятий с инструктором",
+                        "Доступ к онлайн платформе ПДД",
+                        "Онлайн поддержка", 
+                        "Сессия с психологом (как побороть страх вождения и приобрести уверенность за рулем)"
+                    ],
+            price: '25 000 рублей'
+        },
+    ]
+
 //-Филиалы
 -
     branches = [
