--- a/src/styles/components/main.sass
+++ b/src/styles/components/main.sass
@@ -11,6 +11,7 @@
 @import sections/events
 @import sections/faq
 @import sections/enroll
+@import sections/extraHours
 
 .stage__index,
 .stage__title,
