--- a/src/components/_variables.pug
+++ b/src/components/_variables.pug
@@ -3,8 +3,8 @@
 
 //-Основная информация
 - phone = { formatted: "8 (812) 642-91-46", notFormatted: "88126429146" }
-- title = `Автошкола АвтоМото в СПб | Права категории B и A за 3 месяца с обучением очно и онлайн`
-- description = `✅ Обучение водителей в СПб на категорию А и Б ✔️ Классы и площадки рядом с метро  ✔️ Офлайн и онлайн ✔️ Обучение вождению на иномарках ✔️ АКПП, МКПП ✔️ Страховка, договор, фиксированная цена ☎️${phone.formatted}`
+- title = `Автошкола в Санкт-Петербурге, цена курсов на категории А и B, C, D, E автошкола онлайн в СПб, стоимость, рейтинг  Автошкола АвтоМото`
+- description = `Официальная автошкола в СПб для женщин на категории А и Б, С, Д, Е с собственным автомобильным парком и удобным расположением у метро. Одна цена на МКПП и АКПП в 2023 году, теоретическое обучение вождению онлайн. По всему Санкт-Петербургу более 30 площадок для практических уроков вождения.`
 - mail = "avtomotospb@yandex.ru"
 - workTime = "пн-пт с 8:00 до 22:30 и сб-вс: с 9:00 до 22:00"
 
@@ -50,7 +50,7 @@
                         "Полный комплект документов",
                         "Организованная сдача экзамена в ГИБДД и получение прав категории Б"
                     ],
-            price: '21 900 рублей'
+            key: '74'
         },
         {
             title: "Категория А",
@@ -61,7 +61,7 @@
                         "Полный комплект документов",
                         "Организованная сдача экзамена в ГИБДД и получение прав категории Б"
                     ],
-            price: '15 000 рублей'
+            key: '86'
         },
     ]
 
@@ -77,7 +77,7 @@
                         "Доступ к онлайн платформе ПДД",
                         "Онлайн поддержка"
                     ],
-            price: '11 000 рублей'
+            pack: "first_rate"
         },
         {
             title: "Оптимальный пакет",
@@ -87,7 +87,7 @@
                         "Доступ к онлайн платформе ПДД",
                         "Онлайн поддержка"
                     ],
-            price: '20 000 рублей'
+            pack: "second_rate"
         },
         {
             title: "Расширенный пакет",
@@ -95,10 +95,10 @@
                     [
                         "10 занятий с инструктором",
                         "Доступ к онлайн платформе ПДД",
-                        "Онлайн поддержка", 
+                        "Онлайн поддержка",
                         "Сессия с психологом (как побороть страх вождения и приобрести уверенность за рулем)"
                     ],
-            price: '25 000 рублей'
+            pack: "third_rate"
         },
     ]
 
